implement custom font, custom colours, custom rounded

--- a/src/app/components/playback-view/playback-view.component.html
+++ b/src/app/components/playback-view/playback-view.component.html
@@ -1,5 +1,16 @@
 <div class="playback-view">
-   <p>Message: {{message}}</p>
-   <p>Context: {{context}}</p>
-   <p>Orientation: {{orientation}}</p>
+   <h1>FIDELIS IG</h1>
+   <h2>DIGITAL DESIGN SYSTEM</h2>
+   <h3>Custom Card</h3>
+   <p>This card is just a demo to show custom fonts, custom colours, custom rounded.</p>
+   <div class="">
+      <div class="color-box white"></div>
+      <div class="color-box dark-green"></div>
+      <div class="color-box teal"></div>
+      <div class="color-box medium-green"></div>
+      <div class="color-box grey"></div>
+      <div class="color-box light-teal"></div>
+   </div>
+  
+   
 </div>
