--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,3 +4,59 @@ app-base-view {
    background-color: transparent;
 }
 
+@font-face {
+   font-family: 'Gotham';
+   src: url('../assets/fonts/gotham/GothamBold.ttf') format('truetype');
+   font-weight: bold;
+   font-style: normal;
+ }
+ 
+ @font-face {
+   font-family: 'Gotham';
+   src: url('../assets/fonts/gotham/GothamBoldItalic.ttf') format('truetype');
+   font-weight: bold;
+   font-style: italic;
+ }
+ 
+ @font-face {
+   font-family: 'Gotham';
+   src: url('../assets/fonts/gotham/GothamBook.ttf') format('truetype');
+   font-weight: normal;
+   font-style: normal;
+ }
+ 
+ @font-face {
+   font-family: 'Gotham';
+   src: url('../assets/fonts/gotham/GothamBookItalic.ttf') format('truetype');
+   font-weight: normal;
+   font-style: italic;
+ }
+ 
+ @font-face {
+   font-family: 'Gotham';
+   src: url('../assets/fonts/gotham/GothamLight.ttf') format('truetype');
+   font-weight: 300; /* Light */
+   font-style: normal;
+ }
+ 
+ @font-face {
+   font-family: 'Gotham';
+   src: url('../assets/fonts/gotham/GothamLightItalic.ttf') format('truetype');
+   font-weight: 300; /* Light */
+   font-style: italic;
+ }
+ 
+ @font-face {
+   font-family: 'Gotham';
+   src: url('../assets/fonts/gotham/GothamMedium.ttf') format('truetype');
+   font-weight: 500; /* Medium */
+   font-style: normal;
+ }
+ 
+ @font-face {
+   font-family: 'Gotham';
+   src: url('../assets/fonts/gotham/GothamMediumItalic.ttf') format('truetype');
+   font-weight: 500; /* Medium */
+   font-style: italic;
+ }
+ 
